--- a/front/src/main.css
+++ b/front/src/main.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
+
 *, html, body, div, p, span, h1, h2, h3, h4, h5, h6, canvas {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 canvas {
