--- a/front/src/main.css
+++ b/front/src/main.css
@@ -13,3 +13,32 @@ canvas {
   background: #060115;
   z-index: -1;
 }
+
+label {
+  margin: 0 !important;
+  font-weight: bold !important;
+  font-size: 0.8em !important;
+}
+
+
+h2.title {
+  line-height: 1.4em;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  width: 500px;
+  font-weight: 900;
+  border-left: 3px solid #0ac9f8;
+  padding-left: 10px;
+  font-size: 1.8em !important;
+}
+
+h2.title:after {
+  content: '';
+  height: 3px;
+  width: 600px;
+  background: -webkit-linear-gradient(left,#01d1fe,#ff005c);
+  background: linear-gradient(to right,#01d1fe,#ff005c);
+  display: block;
+  position: absolute;
+  left: 15px;
+}
