--- a/front/src/components/button/button.css
+++ b/front/src/components/button/button.css
@@ -13,3 +13,20 @@
   cursor: pointer;
   background-color: #1459d8;
 }
+
+.btn-profile {
+  min-width: 20%;
+  background: darkblue;
+  border: none;
+  margin: 0;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  transition: background .5s;
+  float: right;
+}
+
+.btn-profile:hover {
+  cursor: pointer;
+  background-color: #1459d8;
+}
