--- a/front/src/components/futurist-logo/futurist-logo.css
+++ b/front/src/components/futurist-logo/futurist-logo.css
@@ -1,18 +1,29 @@
 
+.spinner:not(.home):before {
+  content: '';
+  position: absolute;
+  top: -27%;
+  left: -35%;
+  width: 160%;
+  height: 160%;
+  background: #060115;
+  border-radius: 50%;
+}
 
 .spinner:not(.home) {
   list-style: none;
   padding: 0;
   margin: 0;
   color: #00d2ff;
-  position: absolute;
-  top: 45%;
-  left: 10%;
+  position: fixed;
+  top: 10%;
+  left: 50.8%;
   margin-top: -25px;
   margin-left: -25px;
   width: 50px;
   height: 50px;
   text-align: center;
+  z-index: 99999;
   animation: scale 3.5s ease, colorChange 10s linear 2s infinite;
 }
 .spinner:not(.home):after {
