--- a/front/src/containers/profile/profile.css
+++ b/front/src/containers/profile/profile.css
@@ -1,21 +1,37 @@
 .profile-form {
-  background: white;
-  width: 30vw;
-  margin: auto;
-  margin-top: 25vh;
-  margin-bottom: 25vh;
-  border-radius: 5px;
-  transition: box-shadow .5s;
+  margin: 25px 0;
 }
 
-.profile-form:hover {
-  box-shadow: 0 0 20px 5px pink;
+.profile-form .row {
+  margin-top: 25px
 }
 
-.active {
-  display: block
+.profile-form input, .profile-form select, .profile-form textarea {
+  padding: 10px;
 }
 
-.non-active {
-  display: none
+.profile-form textarea {
+  height: 150px
+}
+
+
+.profile-form .title {
+  line-height: 1.4em;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  width: 500px;
+  font-weight: 900;
+  border-left: 3px solid #0ac9f8;
+  padding-left: 10px;
+}
+
+.profile-form .title:after {
+  content: '';
+  height: 3px;
+  width: 600px;
+  background: -webkit-linear-gradient(left,#01d1fe,#ff005c);
+  background: linear-gradient(to right,#01d1fe,#ff005c);
+  display: block;
+  position: absolute;
+  left: 15px;
 }
