--- a/front/src/components/course-card/course-card.css
+++ b/front/src/components/course-card/course-card.css
@@ -11,6 +11,8 @@
 }
 
 .overlay .course-image img {
+  height: 100%;
+  width: 100%;
 	opacity: 1;
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
@@ -18,6 +20,7 @@
 
 .overlay.course-card:hover img {
 	opacity: .5;
+  cursor: pointer;
 }
 
 .overlay span.title {
